@@ -358,9 +358,9 @@ static void zend_accel_do_delayed_early_binding(
 					ce = zend_try_early_bind(orig_ce, parent_ce, early_binding->lcname, zv);
 				}
 			}
-		}
-		if (ce && early_binding->cache_slot != (uint32_t) -1) {
-			*(void**)((char*)run_time_cache + early_binding->cache_slot) = ce;
+			if (ce && early_binding->cache_slot != (uint32_t) -1) {
+				*(void**)((char*)run_time_cache + early_binding->cache_slot) = ce;
+			}
 		}
 	}
 	CG(compiled_filename) = orig_compiled_filename;
