@@ -24,6 +24,7 @@ PHP                                                                        NEWS
 - Opcache:
   . Fixed bug GH-11134 (Incorrect match default branch optimization). (ilutov)
   . Fixed too wide OR and AND range inference. (nielsdos)
+  . Fixed missing class redeclaration error with OPcache enabled. (ilutov)
 
 - PCNTL:
   . Fixed maximum argument count of pcntl_forkx(). (nielsdos)
